--- a/css/styles.css
+++ b/css/styles.css
@@ -419,9 +419,11 @@ inner-div svg:hover {
 } */
 
 .grid__items {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+    /* display: flex;
+    flex-direction: column; */
+    /* gap: 10px; */
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 /* .our-description a {
@@ -639,8 +641,13 @@ inner-div svg:hover {
     padding-top: 94px;
 } */
 
+.section-two {
+    
+}
+
 .section-four {
-    background: #F5F4FA;;
+    background: #F5F4FA;
+    padding-bottom: 94px;
 }
 
 .section__title {
@@ -654,6 +661,10 @@ inner-div svg:hover {
     /* justify-content: center; */
     /* padding-top: 94px; */
     text-align: center;
+}
+
+.section-four-title {
+    padding-bottom: 50px;
 }
 
 /* .our-team {
@@ -711,8 +722,9 @@ inner-div svg:hover {
     display: flex;
     /* flex-direction: column; */
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 206px;
+    margin: 16px 32px 30px;
 }
 
 /* .social-media-icons-list {
@@ -733,23 +745,15 @@ inner-div svg:hover {
     padding-bottom: 10px;
 }
 
-.social-media__items {
+/* .social-media__items {
     display: flex;
     text-decoration: none;
     width: 206px;
     justify-content: space-between;
     color: #AFB1B8;
-}
-
-/* .social-media-icons-list a:hover {
-    color: white;
 } */
 
-.social-media__items a:hover {
-    color: white;
-}
-
-.icon-list-item {
+.social-media__item {
     height: 44px;
     width: 44px;
     background-color: #FFFFFF;
@@ -760,15 +764,45 @@ inner-div svg:hover {
     margin-bottom: 30px;
 }
 
-.icon-list-item:hover {
+
+/* .social-media-icons-list a:hover {
+    color: white;
+} */
+
+/* .social-media__item a:hover {
+    fill: white;
+} */
+
+/* .icon-list-item {
+    height: 44px;
+    width: 44px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+} */
+
+.social-media__item svg:hover {
+    fill: white;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-media__item:hover {
     background-color: #2196F3;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-list-item svg:hover {
+/* .icon-list-item:hover {
+    background-color: #2196F3;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
+
+/* .icon-list-item svg:hover {
     fill: white;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 /* .description {
     font-weight: 400;
