--- a/css/styles.css
+++ b/css/styles.css
@@ -465,6 +465,7 @@ inner-div svg:hover {
     /* display: flex;
     flex-direction: column; */
     /* gap: 10px; */
+    background: white;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -648,7 +649,7 @@ inner-div svg:hover {
 } */
 
 .section-three-title {
-    padding-top: 91px;
+    /* padding-top: 91px; */
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
@@ -793,7 +794,7 @@ inner-div svg:hover {
     line-height: 19px;
     letter-spacing: 0.03em;
     color: #757575;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
 }
 
 /* .title-team {
@@ -847,7 +848,7 @@ inner-div svg:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 
