--- a/css/styles.css
+++ b/css/styles.css
@@ -491,11 +491,22 @@ inner-div svg:hover {
 .section-portofolio {
     display: flex;
     flex-direction: column;
-    padding-top: 94px;
+    /* padding-top: 94px; */
     padding-bottom: 94px;
 }
 
-.button-projects {
+/* .button-projects {
+    list-style: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    height: 38px;
+    padding-bottom: 50px;
+} */
+
+.grid-projects {
     list-style: none;
     border-radius: 4px;
     cursor: pointer;
@@ -534,19 +545,31 @@ inner-div svg:hover {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portofolio {
+/* .portofolio {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+} */
+
+.grid-portofolio {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
 }
 
-.card-portofolio {
+/* .card-portofolio {
+    flex-basis: 370px;
+    height: 404px;
+} */
+
+.grid__card-portofolio {
     flex-basis: 370px;
     height: 404px;
 }
 
-.card-portofolio:hover {
+.grid__card-portofolio:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
 }
@@ -568,7 +591,7 @@ inner-div svg:hover {
     padding: 63px 24px 91px 24px;
 }
 
-.card-portofolio-upper {
+.grid__card-portofolio-upper {
     position: relative;
     overflow: hidden;
     width: 370px;
@@ -577,23 +600,23 @@ inner-div svg:hover {
     margin-right: auto;
 }
 
-.card-portofolio-upper:hover .overlay {
+.grid__card-portofolio-upper:hover .overlay {
     transform: translateY(0px);
 }
 
-.card-portofolio-lower {
+.grid__card-portofolio-lower {
     padding: 20px 24px;
 }
 
-.portofolio > li {
+.grid-portofolio > li {
     border: 1px solid #EEEEEE;
 }
 
-.card-portofolio > h3 {
+.grid__card-portofolio > h3 {
    padding: 20px 0px 4px 24px;
 }
 
-.card-portofolio > p {
+.grid__card-portofolio > p {
     padding-left: 24px;
 }
 
@@ -602,7 +625,7 @@ inner-div svg:hover {
     height: 294px;
 }
 
-/* .title {
+.grid-title {
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -610,7 +633,17 @@ inner-div svg:hover {
     text-transform: uppercase;
     color: #212121;
     padding-bottom: 4px;
-} */
+}
+
+.grid-description {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: #757575;
+    padding-bottom: 20px;
+}
+
 
 .our-qualities__title {
     font-weight: 700;
@@ -891,14 +924,6 @@ inner-div svg:hover {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } */
 
-/* .description {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: #757575;
-    padding-bottom: 20px;
-} */
 
 .our-qualities__description {
     font-weight: 400;
