--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "../sass/utils/vars";
 @import "../sass/components/portofolio";
 @import "../sass/base/base";
+@import "../sass/components/header";
 
 .class {
     color: red;
