--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "../sass/components/portofolio";
 @import "../sass/base/base";
 @import "../sass/components/header";
+@import "../sass/components/footer";
 
 .class {
     color: red;
