--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "../sass/base/base";
 @import "../sass/components/header";
 @import "../sass/components/footer";
+@import "../sass/components/modal";
 
 .class {
     color: red;
