--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,23 @@
 
-html {
+/* html {
     font-family: 'Roboto';
     font-style: normal;
     font-size: 14px;
-}
+} */
 
-li {
+/* li {
     list-style: none;
     text-decoration: none;
-}
+} */
 
-.container {
+/* .container {
     width: 1200px;
     margin: 0px auto;
-}
+} */
 
-.section {
-    /* margin: 0px; */
-    /* margin: 0px auto; */
+/* .section {
     padding-top: 94px;
-}
+} */
 
 /* .header-navigation { 
     background-color: white;
@@ -399,10 +397,10 @@ li {
     align-items: center;
 }
 
-.grid {
+/* .grid {
     display: flex;
     gap: 30px;
-}
+} */
 
 .grid__card {
     background: white;
@@ -420,13 +418,13 @@ li {
     margin-bottom: 30px;
 }
 
-.section-portofolio {
+/* .portofolio-section {
     display: flex;
     flex-direction: column;
     padding-bottom: 94px;
-}
+} */
 
-.grid-projects {
+/* .grid-projects {
     list-style: none;
     border-radius: 4px;
     cursor: pointer;
@@ -435,9 +433,9 @@ li {
     gap: 8px;
     height: 38px;
     padding-bottom: 50px;
-}
+} */
 
-.button {
+/* .grid-button {
     height: 38px;
     background: #F5F4FA;
     border-radius: 4px;
@@ -450,7 +448,7 @@ li {
     color: #212121;
     border: none;
     padding: 6px 22px 6px 22px;
-}
+} */
 
 .button:hover {
     color: #2196F3;
@@ -465,24 +463,24 @@ li {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.grid-portofolio {
+/* .grid-portofolio {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
-}
+} */
 
-.grid__card-portofolio {
+/* .grid__card-portofolio {
     flex-basis: 370px;
     height: 404px;
-}
+} */
 
-.grid__card-portofolio:hover {
+/* .grid__card-portofolio:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
-}
+} */
 
-.overlay {
+/* .grid__overlay {
     font-weight: 400;
     font-size: 18px;
     line-height: 28px;
@@ -497,43 +495,43 @@ li {
     transform: translatey(101%);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 63px 24px 91px 24px;
-}
+} */
 
-.grid__card-portofolio-upper {
+/* .grid__card-portofolio-upper {
     position: relative;
     overflow: hidden;
     width: 370px;
     height: 294px;
     margin-left: auto;
     margin-right: auto;
-}
+} */
 
-.grid__card-portofolio-upper:hover .overlay {
+/* .grid__card-portofolio-upper:hover .grid__overlay {
     transform: translateY(0px);
-}
+} */
 
-.grid__card-portofolio-lower {
+/* .grid__card-portofolio-lower {
     padding: 20px 24px;
-}
+} */
 
-.grid-portofolio > li {
+/* .grid-portofolio > li {
     border: 1px solid #EEEEEE;
-}
+} */
 
-.grid__card-portofolio > h3 {
+/* .grid__card-portofolio > h3 {
    padding: 20px 0px 4px 24px;
-}
+} */
 
-.grid__card-portofolio > p {
+/* .grid__card-portofolio > p {
     padding-left: 24px;
-}
+} */
 
-.image-portofolio {
+/* .grid__image-portofolio {
     width: 370px; 
     height: 294px;
-}
+} */
 
-.grid-title {
+/* .grid-title {
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -541,16 +539,16 @@ li {
     text-transform: uppercase;
     color: #212121;
     padding-bottom: 4px;
-}
+} */
 
-.grid-description {
+/* .grid-description {
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
     color: #757575;
     padding-bottom: 20px;
-}
+} */
 
 .our-qualities__title {
     font-weight: 700;
@@ -847,11 +845,11 @@ li {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } */
 
-* {
+/* * {
     margin-block-start: auto;
     margin-block-end: auto;
     padding-inline-start: 0px;
-}
+} */
 
 /* .footer-right {
     height: 80px;
