--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -36,6 +36,7 @@
     }
     &-adress {
         padding-bottom: 12px;
+        width: 207px;
     }
     &-adress-link {
         font-weight: 400;
