--- a/css/styles.css
+++ b/css/styles.css
@@ -355,14 +355,14 @@
     padding-right: 30px;
 } */
 
-.section-one {
+/* .section-one {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4) 180%, #C4C4C4 300%), url(../images/backgroung-Img.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 600px;
-}
+} */
 
-.section-one-title {
+/* .section-one-title {
     font-weight: 900;
     font-size: 44px;
     line-height: 60px;
@@ -375,9 +375,9 @@
     margin-inline-start: auto;
     margin-inline-end: auto;
     padding-top: 200px;
-}
+} */
 
-.head-button {
+/* .head-button {
     height: 50px;
     background:  #2196F3;
     border-radius: 4px;
@@ -395,28 +395,28 @@
     margin-inline-end: auto;
     justify-content: center;
     align-items: center;
-}
+} */
 
 /* .grid {
     display: flex;
     gap: 30px;
 } */
 
-.grid__card {
+/* .grid__card {
     background: white;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-}
+} */
 
 
-.our-qualities a {
+/* .our-qualities a {
     background-color: #F5F4FA;
     align-items: center;
     height: 120px;
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
-}
+} */
 
 /* .portofolio-section {
     display: flex;
@@ -450,7 +450,7 @@
     padding: 6px 22px 6px 22px;
 } */
 
-.button:hover {
+/* .grid-button:hover {
     color: #2196F3;
     cursor: pointer;
     border: none;
@@ -461,7 +461,7 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 /* .grid-portofolio {
     display: flex;
@@ -550,7 +550,7 @@
     padding-bottom: 20px;
 } */
 
-.our-qualities__title {
+/* .our-qualities__title {
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -558,16 +558,16 @@
     text-transform: uppercase;
     color: #212121;
     padding-bottom: 4px;
-}
+} */
 
-.section-three {
+/* .section-three {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-bottom: 94px;
-}
+} */
 
-.section-three-title {
+/* .section-three-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
@@ -576,14 +576,14 @@
     padding-bottom: 50px;
     display: flex;
     justify-content: center;
-}
+} */
 
-.what-we-do {
+/* .section-three-what-we-do {
     display: flex;
     flex-direction: column-reverse;
-}
+} */
 
-.what-we-do__title {
+/* .section-three-what-we-do__title {
     position: absolute;
     width: 370px;
     height: 70px;
@@ -595,76 +595,81 @@
     display: flex;
     align-items: center;
     box-sizing: border-box;
-}
+} */
 
-.section-our-team {
+/* .section-our-team {
     background-color: #F5F4FA;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
-.section-two {
+/* .section-two {
 
-}
+} */
 
-.section-three {
-
-}
-
-.section-four {
+/* .section-four {
     background: #F5F4FA;
     padding-bottom: 94px;
-}
+} */
 
-.section__title {
+/* .section__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
     letter-spacing: 0.03em;
     text-align: center;
-}
+} */
 
-.section-four-title {
+/* .section-four-title {
     padding-bottom: 50px;
     color: #212121;
-}
+} */
 
-.our-team__image {
+/* .our-team__image {
     padding-bottom: 30px;
-}
+} */
 
-.our-team__ocupation {
+/* .our-team__ocupation {
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
     letter-spacing: 0.03em;
     color: #757575;
-}
+} */
 
-.our-team__name {
+
+
+
+
+
+/* .our-team__name {
     padding-bottom: 10px;
-}
+} */
 
-.social-media-icons {
+
+
+
+
+/* .social-media-icons {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     width: 206px;
     margin: 16px 32px 30px;
-}
+} */
 
-.our-team__details {
+/* .our-team__details {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
-.our-team__title {
+/* .our-team__title {
     padding-bottom: 10px;
-}
+} */
 
-.social-media__item {
+/* .social-media__item {
     height: 44px;
     width: 44px;
     background-color: #FFFFFF;
@@ -672,18 +677,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.social-media__item svg:hover {
+/* .social-media__item svg:hover {
     fill: white;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.social-media__item:hover {
+/* .social-media__item:hover {
     background-color: #2196F3;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
+} */
+/* 
 .our-qualities__description {
     font-weight: 400;
     font-size: 14px;
@@ -691,31 +696,37 @@
     letter-spacing: 0.03em;
     color: #757575;
     padding-bottom: 20px;
-}
+} */
 
-.section-five {
+/* .section-five {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
-.section-five-title {
+/* .section-five-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    /* margin-top: 91px; */
-}
+} */
 
-.regular-customers-list {
+
+
+
+
+/* .regular-customers-list {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.grid-customers {
+
+
+
+/* .grid-customers {
     width: 170px;
     height: 92px;
     border: 1px solid #AFB1B8;
@@ -724,17 +735,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
+} */
+/* 
 .grid-customers svg:hover {
     fill: #2196f3;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.grid-customers:hover {
+/* .grid-customers:hover {
     border-color: #2196f3;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 /* .footer {
     background-color: #2F303A;
@@ -866,7 +877,7 @@
     text-decoration: none;
 } */
 
-.page-link-a::after {
+/* .page-link-a::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -876,7 +887,7 @@
     top: 46px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     left: 0px;
-}
+} */
 
 /* .footer-form-position {
     margin: 0px 0px 0px 93px;
