--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,3 +23,30 @@ li {
     margin-block-end: auto;
     padding-inline-start: 0px;
 }
+.section__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    letter-spacing: 0.03em;
+    text-align: center;
+}
+
+.social-media-icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 206px;
+    margin: 16px 32px 30px;
+}
+
+.page-link-a::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background: #2196f3;
+    border-radius: 2px;
+    top: 46px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    left: 0px;
+}
