--- a/sass/components/_portofolio.scss
+++ b/sass/components/_portofolio.scss
@@ -36,6 +36,18 @@
         border: none;
         padding: 6px 22px 6px 22px;
     }
+    &-button:hover {
+        color: #2196F3;
+        cursor: pointer;
+        border: none;
+        width: auto;
+        height: 38px;
+        color: white;
+        background: #2196F3;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
     &-portofolio {
         display: flex;
         justify-content: center;
