--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,9 @@
 @import "../sass/components/header";
 @import "../sass/components/footer";
 @import "../sass/components/modal";
+@import "../sass/components/section-one";
+@import "../sass/components/section-two";
+@import "../sass/components/section-three";
+@import "../sass/components/section-four";
+@import "../sass/components/section-five";
 
